tests/snapshots/examples_fixtures/Modules__advanced_map_filter_fold_pipeline.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/Modules/advanced_map_filter_fold_pipeline.flx
== compile ==
failed (module)
== diagnostics ==
--> compiler error[E018]: IMPORT NOT FOUND

Cannot find module `Modules.Analytics.Transforms` to import.

  --> examples/Modules/advanced_map_filter_fold_pipeline.flx:5:1
  |
5 | import Modules.Analytics.Transforms as T
  | ^

Hint:
  Check that: 1) The module file exists (e.g., `Modules.Analytics.Transforms.flx`), 2) The file is in a module root directory (current dir or ./src by default), 3) The module path matches the file structure (e.g., `Foo.Bar` → `Foo/Bar.flx`). Use `--root` flag to add more search paths.
  Looked for module `Modules.Analytics.Transforms` under roots: examples/Modules, src (imported from examples/Modules/advanced_map_filter_fold_pipeline.flx).


--> compiler error[E018]: IMPORT NOT FOUND

Cannot find module `Modules.Math` to import.

  --> examples/Modules/advanced_map_filter_fold_pipeline.flx:6:1
  |
6 | import Modules.Math as Math
  | ^

Hint:
  Check that: 1) The module file exists (e.g., `Modules.Math.flx`), 2) The file is in a module root directory (current dir or ./src by default), 3) The module path matches the file structure (e.g., `Foo.Bar` → `Foo/Bar.flx`). Use `--root` flag to add more search paths.
  Looked for module `Modules.Math` under roots: examples/Modules, src (imported from examples/Modules/advanced_map_filter_fold_pipeline.flx).

Found 2 errors.
== stdout ==
<not executed>
